STERI016-315-flip-card-am: Adjust Flip Card alignment to start from the top and ensure uniform field alignment across rows. (#804)

--- a/blocks/flip-cards/flip-cards.css
+++ b/blocks/flip-cards/flip-cards.css
@@ -114,14 +114,6 @@
   .flip-cards > .wrapper {
     flex: 1;
   }
-
-  .flip-cards > .wrapper > div {
-    height: 420px;
-  }
-
-  .flip-cards.flip-cards-4-cols > .wrapper > div {
-    height: 472px;
-  }
 }
 
 /* stylelint-disable-next-line no-descending-specificity */
